src/Parser/PapyrusParser.ts
// Generated from ./src/Parser/Papyrus.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { PapyrusListener } from './PapyrusListener';
import { PapyrusVisitor } from './PapyrusVisitor';


export class PapyrusParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly T__12=13;
	public static readonly T__13=14;
	public static readonly T__14=15;
	public static readonly T__15=16;
	public static readonly T__16=17;
	public static readonly T__17=18;
	public static readonly T__18=19;
	public static readonly T__19=20;
	public static readonly T__20=21;
	public static readonly T__21=22;
	public static readonly T__22=23;
	public static readonly T__23=24;
	public static readonly T__24=25;
	public static readonly K_AS=26;
	public static readonly K_AUTO=27;
	public static readonly K_AUTOREADONLY=28;
	public static readonly K_BETAONLY=29;
	public static readonly K_BOOLEAN=30;
	public static readonly K_COLLAPSED=31;
	public static readonly K_COLLAPSEDONBASE=32;
	public static readonly K_COLLAPSEDONREF=33;
	public static readonly K_CONDITIONAL=34;
	public static readonly K_CONST=35;
	public static readonly K_CUSTOMEVENT=36;
	public static readonly K_CUSTOMEVENTNAME=37;
	public static readonly K_DEBUGONLY=38;
	public static readonly K_DEFAULT=39;
	public static readonly K_ELSE=40;
	public static readonly K_ELSEIF=41;
	public static readonly K_ENDEVENT=42;
	public static readonly K_ENDFUNCTION=43;
	public static readonly K_ENDGROUP=44;
	public static readonly K_ENDIF=45;
	public static readonly K_ENDPROPERTY=46;
	public static readonly K_ENDSTATE=47;
	public static readonly K_ENDSTRUCT=48;
	public static readonly K_ENDWHILE=49;
	public static readonly K_EVENT=50;
	public static readonly K_EXTENDS=51;
	public static readonly K_FALSE=52;
	public static readonly K_FLOAT=53;
	public static readonly K_FUNCTION=54;
	public static readonly K_GLOBAL=55;
	public static readonly K_GROUP=56;
	public static readonly K_HIDDEN=57;
	public static readonly K_IF=58;
	public static readonly K_IMPORT=59;
	public static readonly K_IS=60;
	public static readonly K_INTEGER=61;
	public static readonly K_LENGTH=62;
	public static readonly K_MANDATORY=63;
	public static readonly K_NATIVE=64;
	public static readonly K_NEW=65;
	public static readonly K_NONE=66;
	public static readonly K_PARENT=67;
	public static readonly K_PROPERTY=68;
	public static readonly K_RETURN=69;
	public static readonly K_SCRIPTNAME=70;
	public static readonly K_SCRIPTEVENTNAME=71;
	public static readonly K_SELF=72;
	public static readonly K_STATE=73;
	public static readonly K_STRING=74;
	public static readonly K_STRUCT=75;
	public static readonly K_STRUCTVARNAME=76;
	public static readonly K_TRUE=77;
	public static readonly K_VAR=78;
	public static readonly K_WHILE=79;
	public static readonly L_FLOAT=80;
	public static readonly L_INT=81;
	public static readonly L_STRING=82;
	public static readonly L_ARRAY=83;
	public static readonly IDENTIFIER=84;
	public static readonly COMMENT_DOC=85;
	public static readonly COMMENT_MULTI=86;
	public static readonly COMMENT_SINGLE=87;
	public static readonly WHITESPACE=88;
	public static readonly LINETERMINATOR=89;
	public static readonly RULE_papyrusFile = 0;
	public static readonly RULE_typeDefinition = 1;
	public static readonly RULE_literalDefinition = 2;
	public static readonly RULE_valueDefinition = 3;
	public static readonly RULE_namespace = 4;
	public static readonly RULE_objectName = 5;
	public static readonly RULE_scriptHeader = 6;
	public static readonly RULE_scriptFlags = 7;
	public static readonly RULE_blockDeclaration = 8;
	public static readonly RULE_propertyDeclaration = 9;
	public static readonly RULE_fullPropertyDeclaration = 10;
	public static readonly RULE_fullPropertyFlags = 11;
	public static readonly RULE_autoPropertyDeclaration = 12;
	public static readonly RULE_autoPropertyFlags = 13;
	public static readonly RULE_eventOrFunctionDeclaration = 14;
	public static readonly RULE_functionFlags = 15;
	public static readonly RULE_functionBlock = 16;
	public static readonly RULE_expressionBlock = 17;
	public static readonly RULE_expressionList = 18;
	public static readonly RULE_expression = 19;
	public static readonly RULE_primary = 20;
	public static readonly RULE_variableDeclaration = 21;
	public static readonly RULE_structDeclaration = 22;
	public static readonly RULE_stateDeclaration = 23;
	public static readonly RULE_groupDeclaration = 24;
	public static readonly RULE_groupFlags = 25;
	public static readonly RULE_customEventDeclaration = 26;
	public static readonly RULE_importDeclaration = 27;
	public static readonly ruleNames: string[] = [
		"papyrusFile", "typeDefinition", "literalDefinition", "valueDefinition", 
		"namespace", "objectName", "scriptHeader", "scriptFlags", "blockDeclaration", 
		"propertyDeclaration", "fullPropertyDeclaration", "fullPropertyFlags", 
		"autoPropertyDeclaration", "autoPropertyFlags", "eventOrFunctionDeclaration", 
		"functionFlags", "functionBlock", "expressionBlock", "expressionList", 
		"expression", "primary", "variableDeclaration", "structDeclaration", "stateDeclaration", 
		"groupDeclaration", "groupFlags", "customEventDeclaration", "importDeclaration"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "':'", "'.'", "'='", "'('", "')'", "','", "'!'", "'*'", "'/'", 
		"'%'", "'+'", "'-'", "'<='", "'>='", "'>'", "'<'", "'=='", "'!='", "'&&'", 
		"'||'", "'+='", "'-='", "'*='", "'/='", "'%='"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, "K_AS", "K_AUTO", 
		"K_AUTOREADONLY", "K_BETAONLY", "K_BOOLEAN", "K_COLLAPSED", "K_COLLAPSEDONBASE", 
		"K_COLLAPSEDONREF", "K_CONDITIONAL", "K_CONST", "K_CUSTOMEVENT", "K_CUSTOMEVENTNAME", 
		"K_DEBUGONLY", "K_DEFAULT", "K_ELSE", "K_ELSEIF", "K_ENDEVENT", "K_ENDFUNCTION", 
		"K_ENDGROUP", "K_ENDIF", "K_ENDPROPERTY", "K_ENDSTATE", "K_ENDSTRUCT", 
		"K_ENDWHILE", "K_EVENT", "K_EXTENDS", "K_FALSE", "K_FLOAT", "K_FUNCTION", 
		"K_GLOBAL", "K_GROUP", "K_HIDDEN", "K_IF", "K_IMPORT", "K_IS", "K_INTEGER", 
		"K_LENGTH", "K_MANDATORY", "K_NATIVE", "K_NEW", "K_NONE", "K_PARENT", 
		"K_PROPERTY", "K_RETURN", "K_SCRIPTNAME", "K_SCRIPTEVENTNAME", "K_SELF", 
		"K_STATE", "K_STRING", "K_STRUCT", "K_STRUCTVARNAME", "K_TRUE", "K_VAR", 
		"K_WHILE", "L_FLOAT", "L_INT", "L_STRING", "L_ARRAY", "IDENTIFIER", "COMMENT_DOC", 
		"COMMENT_MULTI", "COMMENT_SINGLE", "WHITESPACE", "LINETERMINATOR"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PapyrusParser._LITERAL_NAMES, PapyrusParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return PapyrusParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "Papyrus.g4"; }

	@Override
	public get ruleNames(): string[] { return PapyrusParser.ruleNames; }

	@Override
	public get serializedATN(): string { return PapyrusParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PapyrusParser._ATN, this);
	}
	@RuleVersion(0)
	public papyrusFile(): PapyrusFileContext {
		let _localctx: PapyrusFileContext = new PapyrusFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PapyrusParser.RULE_papyrusFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 56;
			this.scriptHeader();
			this.state = 60;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 27)) & ~0x1F) === 0 && ((1 << (_la - 27)) & ((1 << (PapyrusParser.K_AUTO - 27)) | (1 << (PapyrusParser.K_BOOLEAN - 27)) | (1 << (PapyrusParser.K_EVENT - 27)) | (1 << (PapyrusParser.K_FLOAT - 27)) | (1 << (PapyrusParser.K_FUNCTION - 27)) | (1 << (PapyrusParser.K_GROUP - 27)))) !== 0) || ((((_la - 61)) & ~0x1F) === 0 && ((1 << (_la - 61)) & ((1 << (PapyrusParser.K_INTEGER - 61)) | (1 << (PapyrusParser.K_STATE - 61)) | (1 << (PapyrusParser.K_STRING - 61)) | (1 << (PapyrusParser.K_STRUCT - 61)) | (1 << (PapyrusParser.K_VAR - 61)) | (1 << (PapyrusParser.IDENTIFIER - 61)))) !== 0)) {
				{
				{
				this.state = 57;
				this.blockDeclaration();
				}
				}
				this.state = 62;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public typeDefinition(): TypeDefinitionContext;
	public typeDefinition(_p: number): TypeDefinitionContext;
	@RuleVersion(0)
	public typeDefinition(_p?: number): TypeDefinitionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: TypeDefinitionContext = new TypeDefinitionContext(this._ctx, _parentState);
		let _prevctx: TypeDefinitionContext = _localctx;
		let _startState: number = 2;
		this.enterRecursionRule(_localctx, 2, PapyrusParser.RULE_typeDefinition, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 70;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PapyrusParser.K_BOOLEAN:
				{
				this.state = 64;
				this.match(PapyrusParser.K_BOOLEAN);
				}
				break;
			case PapyrusParser.K_FLOAT:
				{
				this.state = 65;
				this.match(PapyrusParser.K_FLOAT);
				}
				break;
			case PapyrusParser.K_INTEGER:
				{
				this.state = 66;
				this.match(PapyrusParser.K_INTEGER);
				}
				break;
			case PapyrusParser.K_STRING:
				{
				this.state = 67;
				this.match(PapyrusParser.K_STRING);
				}
				break;
			case PapyrusParser.K_VAR:
				{
				this.state = 68;
				this.match(PapyrusParser.K_VAR);
				}
				break;
			case PapyrusParser.IDENTIFIER:
				{
				this.state = 69;
				this.namespace();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 76;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,2,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					if ( this._parseListeners!=null ) this.triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeDefinitionContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, PapyrusParser.RULE_typeDefinition);
					this.state = 72;
					if (!(this.precpred(this._ctx, 1))) throw new FailedPredicateException(this, "this.precpred(this._ctx, 1)");
					this.state = 73;
					this.match(PapyrusParser.L_ARRAY);
					}
					} 
				}
				this.state = 78;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,2,this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	@RuleVersion(0)
	public literalDefinition(): LiteralDefinitionContext {
		let _localctx: LiteralDefinitionContext = new LiteralDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PapyrusParser.RULE_literalDefinition);
		let _la: number;
		try {
			this.state = 84;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PapyrusParser.K_FALSE:
			case PapyrusParser.K_TRUE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 79;
				_la = this._input.LA(1);
				if ( !(_la===PapyrusParser.K_FALSE || _la===PapyrusParser.K_TRUE) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;
			case PapyrusParser.L_FLOAT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 80;
				this.match(PapyrusParser.L_FLOAT);
				}
				break;
			case PapyrusParser.L_INT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 81;
				this.match(PapyrusParser.L_INT);
				}
				break;
			case PapyrusParser.L_STRING:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 82;
				this.match(PapyrusParser.L_STRING);
				}
				break;
			case PapyrusParser.K_NONE:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 83;
				this.match(PapyrusParser.K_NONE);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public valueDefinition(): ValueDefinitionContext {
		let _localctx: ValueDefinitionContext = new ValueDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PapyrusParser.RULE_valueDefinition);
		let _la: number;
		try {
			this.state = 92;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PapyrusParser.K_FALSE:
			case PapyrusParser.K_TRUE:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 86;
				_la = this._input.LA(1);
				if ( !(_la===PapyrusParser.K_FALSE || _la===PapyrusParser.K_TRUE) ) {
				this._errHandler.recoverInline(this);
				} else {
					if (this._input.LA(1) === Token.EOF) {
						this.matchedEOF = true;
					}

					this._errHandler.reportMatch(this);
					this.consume();
				}
				}
				break;
			case PapyrusParser.L_FLOAT:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 87;
				this.match(PapyrusParser.L_FLOAT);
				}
				break;
			case PapyrusParser.L_INT:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 88;
				this.match(PapyrusParser.L_INT);
				}
				break;
			case PapyrusParser.L_STRING:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 89;
				this.match(PapyrusParser.L_STRING);
				}
				break;
			case PapyrusParser.K_NONE:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 90;
				this.match(PapyrusParser.K_NONE);
				}
				break;
			case PapyrusParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 91;
				this.match(PapyrusParser.IDENTIFIER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public namespace(): NamespaceContext {
		let _localctx: NamespaceContext = new NamespaceContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PapyrusParser.RULE_namespace);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 94;
			this.match(PapyrusParser.IDENTIFIER);
			this.state = 99;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,5,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					{
					{
					this.state = 95;
					this.match(PapyrusParser.T__0);
					this.state = 96;
					this.match(PapyrusParser.IDENTIFIER);
					}
					} 
				}
				this.state = 101;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,5,this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public objectName(): ObjectNameContext {
		let _localctx: ObjectNameContext = new ObjectNameContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PapyrusParser.RULE_objectName);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 107;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,6,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					{
					{
					this.state = 102;
					this.namespace();
					this.state = 103;
					this.match(PapyrusParser.T__1);
					}
					} 
				}
				this.state = 109;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,6,this._ctx);
			}
			this.state = 110;
			this.match(PapyrusParser.IDENTIFIER);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public scriptHeader(): ScriptHeaderContext {
		let _localctx: ScriptHeaderContext = new ScriptHeaderContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PapyrusParser.RULE_scriptHeader);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 112;
			this.match(PapyrusParser.K_SCRIPTNAME);
			this.state = 113;
			this.namespace();
			this.state = 116;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===PapyrusParser.K_EXTENDS) {
				{
				this.state = 114;
				this.match(PapyrusParser.K_EXTENDS);
				this.state = 115;
				this.namespace();
				}
			}

			this.state = 121;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===PapyrusParser.K_BETAONLY || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (PapyrusParser.K_CONDITIONAL - 34)) | (1 << (PapyrusParser.K_CONST - 34)) | (1 << (PapyrusParser.K_DEBUGONLY - 34)) | (1 << (PapyrusParser.K_DEFAULT - 34)) | (1 << (PapyrusParser.K_HIDDEN - 34)) | (1 << (PapyrusParser.K_NATIVE - 34)))) !== 0)) {
				{
				{
				this.state = 118;
				this.scriptFlags();
				}
				}
				this.state = 123;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public scriptFlags(): ScriptFlagsContext {
		let _localctx: ScriptFlagsContext = new ScriptFlagsContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PapyrusParser.RULE_scriptFlags);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 124;
			_la = this._input.LA(1);
			if ( !(_la===PapyrusParser.K_BETAONLY || ((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & ((1 << (PapyrusParser.K_CONDITIONAL - 34)) | (1 << (PapyrusParser.K_CONST - 34)) | (1 << (PapyrusParser.K_DEBUGONLY - 34)) | (1 << (PapyrusParser.K_DEFAULT - 34)) | (1 << (PapyrusParser.K_HIDDEN - 34)) | (1 << (PapyrusParser.K_NATIVE - 34)))) !== 0)) ) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}
